docs/api/qiskit/0.45/qiskit.circuit.library.RVGate.mdx
---
title: RVGate
description: API reference for qiskit.circuit.library.RVGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.RVGate
---

# RVGate

<Class id="qiskit.circuit.library.RVGate" github="https://github.com/qiskit/qiskit/tree/stable/0.45/qiskit/circuit/library/generalized_gates/rv.py" signature="qiskit.circuit.library.RVGate(v_x, v_y, v_z, basis='U')">
  Bases: [`Gate`](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")

  Rotation around arbitrary rotation axis $v$ where $|v|$ is angle of rotation in radians.

  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`rv()`](qiskit.circuit.QuantumCircuit#rv "qiskit.circuit.QuantumCircuit.rv") method.

  **Circuit symbol:**

  ```python
       ┌─────────────────┐
  q_0: ┤ RV(v_x,v_y,v_z) ├
       └─────────────────┘
  ```

  **Matrix Representation:**

  $$
  \newcommand{\rotationangle}{|\vec{v}|}
  \newcommand{\sinc}{\text{sinc}}
      R(\vec{v}) = e^{-i \vec{v}\cdot\vec{\sigma}} =
          \begin{pmatrix}
              \cos\left(\rotationangle\right) -i v_z \sinc\left(\rotationangle\right)
              & -(i v_x + v_y) \sinc\left(\rotationangle\right) \\
              -(i v_x - v_y) \sinc\left(\rotationangle\right)
              & \cos\left(\rotationangle\right) + i v_z \sinc\left(\rotationangle\right)
          \end{pmatrix}
  $$

  Create new rv single-qubit gate.

  **Parameters**

  *   **v\_x** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")) – x-component
  *   **v\_y** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")) – y-component
  *   **v\_z** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")) – z-component
  *   **basis** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")*, optional*) – basis (see [`OneQubitEulerDecomposer`](qiskit.quantum_info.OneQubitEulerDecomposer "qiskit.quantum_info.synthesis.one_qubit_decompose.OneQubitEulerDecomposer"))

  ## Attributes

  ### base\_class

  <Attribute id="qiskit.circuit.library.RVGate.base_class" name="base_class">
    Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.

    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioural perspective. In particular, you should *not* override [`base_class`](#qiskit.circuit.library.RVGate.base_class "qiskit.circuit.library.RVGate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrised gate with a particular set of parameters for the purposes of distinguishing it in a [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") from the full parametrised gate.

    This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:

    ```python
    >>> isinstance(XGate(), XGate)
    True
    >>> type(XGate()) is XGate
    False
    >>> XGate().base_class is XGate
    True
    ```

    In general, you should not rely on the precise class of an instruction; within a given circuit, it is expected that `Instruction.name` should be a more suitable discriminator in most situations.
  </Attribute>

  ### condition

  <Attribute id="qiskit.circuit.library.RVGate.condition" name="condition">
    The classical condition on the instruction.
  </Attribute>

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.RVGate.condition_bits" name="condition_bits">
    Get Clbits in condition.
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.RVGate.decompositions" name="decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.RVGate.definition" name="definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.RVGate.duration" name="duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.RVGate.label" name="label">
    Return instruction label
  </Attribute>

  ### mutable

  <Attribute id="qiskit.circuit.library.RVGate.mutable" name="mutable">
    Is this instance is a mutable unique instance or not.

    If this attribute is `False` the gate instance is a shared singleton and is not mutable.
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.RVGate.name" name="name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.RVGate.num_clbits" name="num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.RVGate.num_qubits" name="num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.RVGate.params" name="params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.RVGate.unit" name="unit">
    Get the time unit of duration.
  </Attribute>

  ## Methods

  ### inverse

  <Function id="qiskit.circuit.library.RVGate.inverse" name="inverse" signature="inverse()">
    Invert this gate.
  </Function>

  ### to\_matrix

  <Function id="qiskit.circuit.library.RVGate.to_matrix" name="to_matrix" signature="to_matrix()">
    Return a numpy.array for the R(v) gate.
  </Function>
</Class>

